Add web interface for browser-based audio transcription
## Summary
Implement a Flask-based web interface that provides the same transcription capabilities as the desktop GUI through a modern web browser.

## Features Added
- **Web Interface**: Complete Flask application with WebSocket support for real-time progress tracking
- **Drag & Drop Upload**: Browser-based file upload with support for all audio formats
- **Real-time Progress**: Live console output and progress tracking during transcription
- **Download Links**: Direct download of generated transcription files (txt, srt, vtt)
- **Responsive Design**: Clean, modern UI that works across different screen sizes
- **Connection Resilience**: Automatic polling backup if WebSocket connection drops during long jobs

## Technical Improvements
- **Path Resolution**: Enhanced transcribe.py to work from both project root and web/ subdirectory
- **File Management**: Separate exports directory for web interface transcriptions
- **Dependencies**: Auto-installation of web-specific requirements (Flask, SocketIO, eventlet)
- **Symlinks**: Automatic creation of bin/ and models/ symlinks in web directory
- **Error Handling**: Improved error reporting and connection management

## Files Added/Modified
- `web/app.py`: Main Flask application with WebSocket support
- `web/templates/index.html`: Complete web interface with real-time features
- `web/requirements.txt`: Web-specific Python dependencies
- `whispertron-web.py`: Web application launcher script
- `src/transcribe.py`: Enhanced for multi-directory operation
- `README.md`: Updated documentation for web interface
- `.gitignore`: Added web exports/uploads and machine-specific symlinks

## Usage
Launch with `python whispertron-web.py` and access at http://localhost:5001

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ models/whisper_models/*
 !models/whisper_models/.gitkeep
 .venv/
 src/whisper
+bin/whisper
+models/whisper_models
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -149,3 +151,5 @@ test.wav
 .vscode/
 *.swp
 *.swo 
+/web/exports
+/web/uploads
